--- a/src/app/events/event-details/event-details.component.html
+++ b/src/app/events/event-details/event-details.component.html
@@ -23,7 +23,7 @@
   </div>
 
   <hr>
-  
+
   <div class="row" style="margin-bottom: 10px">
     <div class="col-md-2">
       <h3 style="margin:0">Sessions</h3>
@@ -54,7 +54,7 @@
     </div>
   </div>
 
-  <session-list  [filterBy]="filterBy" [sortBy]="sortBy" *ngIf="!addMode" [sessions]="event?.sessions"></session-list>
+  <session-list [eventId]="event?.id" [filterBy]="filterBy" [sortBy]="sortBy" *ngIf="!addMode" [sessions]="event?.sessions"></session-list>
   <create-session *ngIf="addMode" (saveNewSession)="saveNewSession($event)" (cancelAddSession)="cancelAddSession()"></create-session>
 </div>
 
