--- a/src/app/user/login.component.html
+++ b/src/app/user/login.component.html
@@ -18,4 +18,6 @@
     <button type="button" (click)="cancel()" class="btn btn-default">Cancel</button>
   </span>
   </form>
+  <br>
+  <div *ngIf="loginInvalid" class="alert alert-danger">Invalid Login Info</div>
 </div>
